--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+repositories {
+    mavenCentral()
+}
+
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -108,6 +112,7 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation platform('com.google.firebase:firebase-bom:32.6.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation "com.facebook.react:hermes-android"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
@@ -120,11 +125,6 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-}
-
-plugins {
-    id 'com.android.application'
-    id 'com.google.gms.google-services'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
