--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,8 +17,8 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")        
-    }
-    plugins {
-        id 'com.google.gms.google-services' version '4.4.0' apply false
-    }
+    }    
 }
+// plugins {
+//     id 'com.google.gms.google-services' version '4.4.0' apply false
+// }
